# qboot

./: .gitignore  Makefile  README  README.md  benchmark.h  cbfs.c  code16.c  code16gcc.h  code32seg.c  cstart.S  e820.c  entry.S  flat.lds  fw_cfg.c  hwsetup.c  int10.c  int15.c  linuxboot.c  main.c  malloc.c  meson.build  mptable.c  pci.c  pflash.c  printf.c  rom.ld.S  smbios.c  string.c  tables.c
.github/workflows/: ccpp.yml
include/: assembly.h  bios.h  bswap.h  const.h  e820.h  fw_cfg.h  ioport.h  linuxboot.h  memaccess.h  multiboot.h  pci.h  pflash.h  processor-flags.h  segment.h  smbios.h  stdio.h  stdlib.h  string.h
